src/components/Card/Card.css
.product-card {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 16px;
    padding-right: 0;
    border: 1px solid #DDDDDD;
    width: 580px;
    background-color: white;
}

.product-image {
    width: 120px;
    height: 120px;
    margin-right: 16px;
}

.title-and-price {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: -25px;
    margin-top: -15px;
}

.product-name {
    font-size: 18px;
    font-weight: 400;
    line-height: 20px;
    letter-spacing: 0.61px;
    text-align: left;
}

.product-description-container {
    position: relative;
    display: inline-block;
    width: 75%;
}

.product-description {
    color: #546285;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0.32px;
    text-align: left;
    overflow: hidden;
    text-overflow: ellipsis;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    white-space: normal;
}

.tooltip-text {
    visibility: hidden;
    width: 500px;
    background-color: white;
    color: #546285;
    text-align:justify;
    border: 1px solid #DDDDDD;
    padding: 5px;
    position: absolute;
    bottom: 120%;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0;
    transition: opacity 0.3s;
    font-size: 0.9em;
    z-index: 1;
}

.product-description-container:hover .tooltip-text {
    visibility: visible;
    opacity: 1;
}

.product-actions {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-top: 10px;
}

.no-arrows::-webkit-outer-spin-button,
.no-arrows::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.product-quantity {
    width: 40px;
    height: 30px;
    padding: 4px;
    border: 1px solid #DDDDDD;
    border-radius: 6px;
    text-align: center;
}

